<resources>
    <string name="app_name">ArmRoboTester</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_navi">AR(m)obo Test app</string>
    <string name="title_activity_sensor">Arm Sensors</string>
    <string name="title_activity_wizard">Arm Wizard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="arm_sensor_motor_icon_description">Arm Sensor Motor icon</string>
    <string name="test_case_label_name">Name:</string>
    <string name="test_case_name_hint">Test case name - TC###</string>
    <string name="test_case_label_id">ID:</string>
    <string name="test_case_id_hint">###</string>
    <string name="test_case_label_motion">Motion:</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="label_button_next">Next</string>
    <string name="label_button_action">Action</string>
    <string name="action_clean">Clean</string>
    <string name="action_remove">Remove</string>
    <string name="text_wizard_instructions">1. Create Test Suite\n2. Connect to Device\n3. Execute Tests\n4. Read Report</string>
    <string name="title_activity_single_test">Arm Simple</string>
    <string name="label_button_reset">Reset</string>
    <string name="label_button_run">Run</string>
    <string name="label_select_device">Select Device:</string>
    <string name="label_shoulder">Shoulder</string>
    <string name="label_elbow">Elbow</string>
    <string name="label_wrist">Wrist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
